# py-trinnov-altitude

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  README.md  Taskfile.yml  pyproject.toml  renovate.json  requirements-dev.txt  ruff.toml  setup.cfg
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: publish.yml  release-please.yml  test.yml
docs/: MAINTAINERS.md  MIGRATION_V2.md  PROTOCOL_ARCHITECTURE.md
tests/: __init__.py  conftest.py  test_adapter.py  test_client.py  test_client_tcp_simulator.py  test_command_bridge.py  test_ha_bridge.py  test_integration_real.py  test_normalizer.py  test_protocol.py  test_transport.py  test_trinnov_altitude.py
trinnov_altitude/: __init__.py  adapter.py  canonical.py  client.py  command_bridge.py  const.py  exceptions.py  ha_bridge.py  lifecycle.py  messages.py  mocks.py  normalizer.py  protocol.py  state.py  transport.py  trinnov_altitude.py
