[metadata]
name = trinnov-altitude
version = attr: trinnov_altitude.__version__
description = "Python client for interfacing with the Trinnov Altitude processor."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/binarylogic/py-trinnov-altitude
author = Ben Johnson
author_email = ben@binarylogic.com
license = Apache 2.0
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: Home Automation

[options]
packages = find:
install_requires =
    wakeonlan>=3.1
